2003-02-26  Bernhard Held <bernhard@bernhardheld.de>

	* configure.in: test for mkstemp
	* sdccconf_in.h: add HAVE_MKSTEMP

2003-02-24  Bernhard Held <bernhard@bernhardheld.de>

	* device/include/ctype.h: removed warning while using --stack-auto
	* device/include/malloc.h: removed warning while using --stack-auto
	* device/include/string.h: removed warning while using --stack-auto

2003-02-23  Borut Razem <borut.razem@siol.net>

	* src/asm.h: corrected assertion in function printILine(): _pipe() was not executed on MSVC,
	because NDEBUG is defined (see man assert)
	* sdcc_vc_in.h: vsnprintf is defined as _vsnprintf on MSVC

2003-02-23  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/gen.c (genUminusFloat): avoided dptr in-/decrement for xdata variables
	* src/mcs51/peeph.def: added rule suggested by Gernot Fink, white space/comment changes

2003-02-18  Frieder Ferlemann <Frieder.Ferlemann@web.de>

        * src/SDCCpeeph.c: added peephole conditions testing for same arguments
        * src/mcs51/peeph.def: added rules 238a-d which remove redundant moves

2003-02-18    <johan@balder>

	* as/mcs51/asmain.c (asmbl): module can start with a digit
	* as/z80/asmain.c (asmbl): module can start with a digit

2003-02-16  Bernhard Held <bernhard@bernhardheld.de>

	* sim/ucsim/mkecho: inserted #!/bin/sh for Cygwin, so that it's executable
	* src/asm.c: fix pipe() for Mingw32

2003-02-15  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCglue.h: make tmpfileNameSet available for preOutName
	* src/SDCCmain.c (preProcess): make sure, that preOutName will be deleted;
	make -V work again; --c1mode reads now from stdin
	* doc/sdccman.lyx: added --c1mode
	* support/Util/SDCCerr.c: new messages for c1 mode
	* support/Util/SDCCerr.h: new messages for c1 mode
	* src/SDCC.lex (checkCurrFile): test if fullSrcFileName is NULL for c1mode

2003-02-15    <johan@balder>

	* src/asm.c: new options: --no-c-code-in-asm and --i-code-in-asm
